// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handlerCommand should fail with a failing handler 1`] = `
{
  "errorCode": "E_UNEXPECTED_SUCCESS",
  "errorParams": [],
  "injectorCalls": [
    [
      [
        "putEcho",
      ],
    ],
  ],
  "logCalls": [
    [
      "debug",
      "handler",
      "putEcho",
    ],
    [
      "debug",
      "parameters",
      {
        "body": {
          "echo": "YOLO!",
        },
      },
    ],
    [
      "error",
      "Got an error while running the handler.",
    ],
  ],
  "promptArgsCalls": [
    [],
  ],
}
`;

exports[`handlerCommand should fail with non JSON parameters 1`] = `
{
  "errorCode": "E_BAD_PARAMETERS",
  "errorParams": [
    "{"body: {"echo": "YOLO!"} }",
    "Unexpected token e in JSON at position 10",
  ],
  "injectorCalls": [],
  "logCalls": [],
  "promptArgsCalls": [
    [],
  ],
}
`;

exports[`handlerCommand should work with all parameters 1`] = `
{
  "injectorCalls": [
    [
      [
        "putEcho",
      ],
    ],
  ],
  "logCalls": [
    [
      "debug",
      "handler",
      "putEcho",
    ],
    [
      "debug",
      "parameters",
      {
        "body": {
          "echo": "YOLO!",
        },
      },
    ],
    [
      "info",
      "{
  "status": 200,
  "body": {
    "echo": "YOLO!"
  }
}",
    ],
  ],
  "promptArgsCalls": [
    [],
  ],
}
`;

exports[`handlerCommand should work with handler only 1`] = `
{
  "injectorCalls": [
    [
      [
        "getPing",
      ],
    ],
  ],
  "logCalls": [
    [
      "debug",
      "handler",
      "getPing",
    ],
    [
      "debug",
      "parameters",
      {},
    ],
    [
      "info",
      "{
  "status": 200
}",
    ],
  ],
  "promptArgsCalls": [
    [],
  ],
}
`;
